mock data is loaded from json file and added close button for the widget details

--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,12 @@
     <!-- Bootstrap JS libs-->
     <script src="lib/bootstrap/ui-bootstrap-0.12.0.min.js"></script>
 
-    <!--html templates-->
+    <!--HTML templates-->
     <script src="./js/clientRoutes.js"></script>
-    <!--services-->
+    <!--services and factories-->
     <script src="js/services/services.js"></script>
     <!--controllers-->
     <script src="js/controllers/controllers.js"></script>
-
 
 </head>
 <body>
