modifications for the edit window

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
     <script src="js/services/services.js"></script>
     <!--controllers-->
     <script src="js/controllers/controllers.js"></script>
+    <!--Directives-->
+    <script src="js/directives/directives.js"></script>
 
 </head>
 <body>
