--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,11 @@
     <!-- Bootstrap JS libs-->
     <script src="lib/bootstrap/ui-bootstrap-0.12.0.min.js"></script>
 
-    <!--HTML templates-->
+    <!--HTML Templates-->
     <script src="./js/clientRoutes.js"></script>
-    <!--services and factories-->
+    <!--Services and Factories-->
     <script src="js/services/services.js"></script>
-    <!--controllers-->
+    <!--Controllers-->
     <script src="js/controllers/controllers.js"></script>
     <!--Directives-->
     <script src="js/directives/directives.js"></script>
